test_suite/alan-2022-examples/passing/000080_deriv.alan
source dA begin y7 := array _26[45] end
