test_suite/alan-2022-examples/failing/002690_mutation.alan
source aBZ begin T := 7 + end
